--- a/journals/2024_12_18.md
+++ b/journals/2024_12_18.md
@@ -1,1 +1,17 @@
-- [[HomePage]]
+### 公嬷纷争
+tags:: 同人
+	- 今天看见大家讨论为什么打厨子只打“嬷味重”的，提到“公公不产出”，对“开大院文学也要说是创作自由”感到不满，因为“这不是一种1V1，我只是想看我的CP不要有其他人”。
+	- 于是思考：
+		- **高质量“公公文学”一定会“开大院”吗？**
+		- **为什么“嬷嬷文学”能在质量较高的基础上保证1V1？**
+	- 虽然到现在都没能很好理解公嬷的含义，粗浅理解前者关注角色的”男性魅力“，后者关注角色的”女性魅力“，这里的男女接近于传统意义上的”阳性气质“和”阴性气质“（*但，不同人对男女阴阳的理解会有较大差异吧... ?* ）
+	- 这意味着，在讨论公嬷的时候，我们需要应用“传统异性恋模板”对角色关系加以解释；或许这也是很多同人创作虽然书写的是“同性关系”，却依然有浓郁的“异性恋感”（*注意，在现实生活中，同性恋者也可能表现出“靠近传统异性恋恋爱模板”的趋势，或许这是社会施于人的强大影响*）。
+	- 我理解的传统异性恋模板中，“一只有众多母狮追随的雄狮”是极有魅力的存在，而以此为“原型”进行创作，不仅作品因为人物丰富可以有更多的可能性（幽默因此而生），还可以通过人物间的“关系结果”刻画“攻方形象”
+		- 对，对攻方进行心理描写是难以体现其魅力的，因为“没有犹豫，直接就做，做得很对”也是攻方的苏点之一
+		- 所以要体现攻的魅力，开大院文学较为方便...?
+		- 与后面对应，把男性写得男性化，本身可能是让女性感到“不适”的（*参考大家对真男同性恋者的恐惧*）
+	- 而以受为主导的作品，通过“很多人喜欢TA”刻画其魅力不失为一种方法，但显然，这远不如对受方进行直接描写
+		- 女性作为同人的主要创作者，其作品本身也是自己精神世界的投射，大部分时候，这些书写都是“女性的书写”
+		- 受方因“处于女性处境”，更容易被写好、写得有魅力——这是不需要通过“衬托”的
+		- 很多优质的作品通过男性的皮套，完成了“女性”的表达——而这些表达，看起来是“嬷味很重”的
+	-
